<?xml version="1.0"?>
<package format="2">
  <name>radiation_layer</name>
  <version>1.0.0</version>
  <description>The radiation_layer package allows for threats due to ionising radiation to be spatially resolved into a costmap layer, compatible with costmap_2D.</description>

  <maintainer email="andrew.west@manchester.ac.uk">Andy West</maintainer>
  <license>TODO</license>

  <url type="repository">https://github.com/EEEManchester/radiation_layer</url>
  <url type="article">https://doi.org/10.3389/frobt.2022.862067</url>

  <author email="andrew.west@manchester.ac.uk">Andy West</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>radiation_msgs</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
